# academy-llm-applications-course-new

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json  devcontainer_setup.sh
.github/workflows/: pre_commit_ci.yml
docs_for_trainers/: READMD.md  README.md  how-to-deploy-aoi-infrastructure.md  how-to-deploy-aoi-models.md  how-to-set-github-codespace-secrets.md  how-to-setup-new-repo-and-code-spaces.md  how-to-switch-to-the-training-subscription.md
docs_for_trainers/Azure OpenAI/: How-to-ensure-each-model-deployment-has-enough-quotas.md  README.md  how-to-deploy-aoi-models.md  how-to-obtain-openai-api-keys.md  how-to-switch-to-the-training-subscription.md
docs_for_trainers/Google Cloud Platform/: README.md  trainer-preparation.md
exercises/01_basic_concepts/: 01_tokenization.ipynb  02_byte_pair_encoding_tokenization.ipynb  02_text_generation.ipynb  03_prompting_openai_api.ipynb  03_prompting_the_api.azure.ipynb  03_prompting_the_api.gcp.ipynb  03_text_generation.ipynb  04_prompting_openai_api.ipynb  05_guardrails.ipynb
exercises/01_basic_concepts/04_chat_GPT_clone_application/: readme.md
exercises/01_basic_concepts/04_chatbot_application/: readme.md
exercises/01_basic_concepts/04_streamlit_tutorial/: simple_chatbot.py  streamlit_tutorial.ipynb
exercises/01_basic_concepts/05_chat_GPT_clone_application/: main.py
exercises/01_basic_concepts/05_chatbot_application/: readme.md
exercises/01_basic_concepts/extras/: 00_gcloud_connection_test.gcp.ipynb  01_byte_pair_encoding_tokenization.ipynb  (+1 more)
exercises/02_clever_prompting/: 01_basic_prompt_engineering.ipynb  02_structured_data_generation.ipynb  houses.csv
exercises/03_RAG/: 01_embeddings.ipynb  02_introduction_to_vector_dbs.ipynb  03_chunking.ipynb  pydata.json
exercises/04_agents/: 01_functions.ipynb  01_tool_calling.ipynb  02_react.ipynb  03_langchain_agents.ipynb  04_assistants.ipynb
exercises/42_hackathon/: README.md  main.py
llm_in_production/: agent_tools.py  agent_utils.py  huggingface_utils.py  llm.py  numpy_utils.py  openai_utils.py  rag_utils.py  text_extraction.py  visualization_utils.py
set_up_docs/: How-to-ensure-each-model-deployment-has-enough-quotas.md  READMD.md  how-to-deploy-aoi-models.md  how-to-reset-openai-api-keys.md  how-to-set-github-codespace-secrets.md
solutions/01_basic_concepts/: 01_tokenization.ipynb  02_byte_pair_encoding_tokenization.ipynb  02_text_generation.ipynb  03_prompting_openai_api.ipynb  03_prompting_the_api.gcp.ipynb  03_prompting_the_api.ipynb  03_text_generation.ipynb  04_prompting_openai_api.ipynb  05_guardrails.ipynb
solutions/02_clever_prompting/: 01_basic_prompt_engineering.ipynb  02_structured_data_generation.ipynb  houses.csv
solutions/03_RAG/: 01_embeddings.ipynb  02_introduction_to_vector_dbs.ipynb  03_chunking.ipynb  pydata.json
solutions/04_agents/: 01_functions.ipynb  01_tool_calling.ipynb  02_react.ipynb  03_langchain_agents.ipynb  04_assistants.ipynb
solutions/42_hackathon/: README.md  main.py
streamlit/: readme.md
streamlit/examples/: widget_examples.py
streamlit/exercises/: 2_line_chart_interaction.py  3_sidebar.py  4_pandas.py  5_pandas_assignment.py  6_pandas_and_cache.py
streamlit/solutions/: 1_simple_line_chart.py  2_line_chart_interaction.py  3_sidebar.py  4_pandas.py  5_pandas_assignment.py  6_pandas_and_cache.py
(+47 files in other folders)
