[project]
name = "llm-in-production"
version = "0.1.0"
description = ""
authors = [
    { name = "Jordi Smit", email = "j0rd1smit@users.noreply.github.com" },
    { name = "James Hayward", email = "jthayward@users.noreply.github.com" },
]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "transformers[torch]>=4.38.0,<5",
    "matplotlib>=3.8.2,<4",
    "tiktoken==0.8.0",
    "openai>=1.3.8,<2",
    "python-dotenv>=1.0.0,<2",
    "streamlit>=1.37.0,<2",
    "scikit-learn>=1.5.0,<2",
    "langchain==0.3.14",
    "faiss-cpu>=1.7.4,<2",
    "plotly>=5.18.0,<6",
    "seaborn>=0.13.0,<0.14",
    "sentence-transformers>=2.2.2,<3",
    "yfinance>=0.2.35,<0.3",
    "langchainhub>=0.1.14,<0.2",
    "langchain-experimental==0.3.4",
    "langchain-openai==0.3.0",
    "tabulate>=0.9.0,<0.10",
    "arxiv>=2.1.0,<3",
    "docx>=0.2.4,<0.3",
    "python-docx>=1.1.2,<2",
    "langchain-core==0.3.30",
    "langchain-google-vertexai>=2.0.11,<3",
    "google-generativeai>=0.8.4,<0.9",
    "langchain-huggingface>=0.1.2,<0.2",
    "ipykernel>=6.29.4,<7",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "invoke>=2.2.0,<3",
    "ipython>=8.18.1,<9",
    "isort>=5.12.0,<6",
    "watchdog>=3.0.0,<4",
    "pre-commit>=3.6.0,<4",
]

[tool.ruff]
line-length = 150
exclude = [
    'exercises',
    'streamlit/assignments',
]

[tool.black]
exclude = '''
(
  /(
    \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | exercises
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)

[tool.isort]
profile = "black"
'''

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
